--- a/public_html/index.html
+++ b/public_html/index.html
@@ -59,14 +59,37 @@
     <main>
         <div class="hero-section ">
 
-            <div class="prj-prev-prnt ">
-                <div class="project-preview-img wickam-st-img ">
+            <div class="prj-prev-prnt">
+                <img class="project-preview-img" src="images/projects/resized/carina-napier-st-front-in-progress-w800.jpg.webp">
+                    <!-- <picture class="project-preview-img">
+                        <source 
+                            type="image/webp" 
+                            alt="luxury living room"
+                            sizes="100vw"
+                            srcset="
+                            images\projects\resized\greenslopes-wickham-st-hendrick-apartment-living-w200.jpg.webp 200w,
+                            images\projects\resized\greenslopes-wickham-st-hendrick-apartment-living-w400.jpg.webp 400w,
+                            images\projects\resized\greenslopes-wickham-st-hendrick-apartment-living-w600.jpg.webp 600w,
+                            images\projects\resized\greenslopes-wickham-st-hendrick-apartment-living-w800.jpg.webp 800w,
+                            images\projects\raw\greenslopes-wickham-st-hendrick-apartment-living.jpg.webp 1620w" >
+                        <source 
+                            alt="luxury living room"
+                            sizes="100vw"
+                            srcset="
+                            images\projects\resized\greenslopes-wickham-st-hendrick-apartment-living-w200.jpg 200w,
+                            images\projects\resized\greenslopes-wickham-st-hendrick-apartment-living-w400.jpg 400w,
+                            images\projects\resized\greenslopes-wickham-st-hendrick-apartment-living-w600.jpg 600w,
+                            images\projects\resized\greenslopes-wickham-st-hendrick-apartment-living-w800.jpg 800w,
+                            images\projects\raw\greenslopes-wickham-st-hendrick-apartment-living.jpg 1620w" >
+                        <img class="hero-image" src="images\projects\resized\greenslopes-wickham-st-hendrick-apartment-living.jpg" alt="luxury living room">
+        
+                      </picture> -->
                     <div class="project-text ">
                         <h3>49 Wickham Street</h3>
                         <p>Modern, two bedroom apartments with free-flowing open-plan layouts. Private balconies with
                             stunning views, secure underground garages, and a premium quality kitchen fit-out </p>
                     </div>
-                </div>
+                
             </div>
             <div class="prj-prev-prnt ">
                 <div class="project-preview-img logan-rd-img ">
