--- a/public_html/about.html
+++ b/public_html/about.html
@@ -56,8 +56,29 @@
 					construction industry.</p>
 			</div>
 
-			<div class="template-grid"><img alt="The Copland Constructions Team, George, Fay and Adam"
-					class="main-image about-image" src="images/logan-rd-living.jpg" />
+			<div class="template-grid">
+				<picture>
+					<source 
+						type="image/webp" 
+						sizes="min-width(800px) calc(800px/3),
+							100vw"
+						srcset="
+						images\projects\resized\greenslopes-logan-rd-apartment-living-w200.jpg.webp 200w,
+						images\projects\resized\greenslopes-logan-rd-apartment-living-w400.jpg.webp 400w,
+						images\projects\resized\greenslopes-logan-rd-apartment-living-w600.jpg.webp 600w,
+						images\projects\resized\greenslopes-logan-rd-apartment-living-w800.jpg.webp 800w,
+						images\projects\raw\greenslopes-logan-rd-apartment-living.jpg.webp 1620w" >
+					<source 
+						sizes="min-width(800px) calc(800px/3),
+							100vw"
+						srcset="
+						images\projects\resized\greenslopes-logan-rd-apartment-living-w200.jpg 200w,
+						images\projects\resized\greenslopes-logan-rd-apartment-living-w400.jpg 400w,
+						images\projects\resized\greenslopes-logan-rd-apartment-living-w600.jpg 600w,
+						images\projects\resized\greenslopes-logan-rd-apartment-living-w800.jpg 800w,
+						images\projects\raw\greenslopes-logan-rd-apartment-living.jpg 1620w" >
+					<img class="main-image about-image" src="images\projects\resized\greenslopes-logan-rd-apartment-living.jpg" alt="The Copland Constructions Team, George, Fay and Adam">
+				  </picture>
 				<div class="template-content">
 					<p class="template-text">Owner George Copland started as a bricklayer and concreter in the late 80s
 						before getting his builder&#39;s licence and taking on residential and light commercial
