--- a/public_html/services.html
+++ b/public_html/services.html
@@ -15,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description"
         content="Copland Constructions is a residential and commercial builder based in Brisbane's Southside, specialising in low and medium rise apartments" />
-    <link href="styles.css " rel=" stylesheet " />
+    <link href="styles-20200204.css" rel=" stylesheet " />
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Saira+Stencil+One&amp;display=swap "
         rel="stylesheet " />
