--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -95,7 +95,7 @@
                         images\projects\resized\greenslopes-wickham-st-hendrick-apartment-inprogress-w400.jpg.webp 400w,
                         images\projects\resized\greenslopes-wickham-st-hendrick-apartment-inprogress-w600.jpg.webp 600w,
                         images\projects\resized\greenslopes-wickham-st-hendrick-apartment-inprogress-w800.jpg.webp 800w,
-                        images\projects\raw\greenslopes-wickham-st-hendrick-apartment-inprogress.PNG 1620w" >
+                        images\projects\raw\greenslopes-wickham-st-hendrick-apartment-inprogress.png 1620w" >
                     <source 
                         alt="an artists impression of a multi-storey apartment"
                         sizes="100vw"
@@ -104,7 +104,7 @@
                         images\projects\resized\greenslopes-wickham-st-hendrick-apartment-inprogress-w400.jpg 400w,
                         images\projects\resized\greenslopes-wickham-st-hendrick-apartment-inprogress-w600.jpg 600w,
                         images\projects\resized\greenslopes-wickham-st-hendrick-apartment-inprogress-w800.jpg 800w,
-                        images\projects\raw\greenslopes-wickham-st-hendrick-apartment-inprogress.PNG 1620w" >
+                        images\projects\raw\greenslopes-wickham-st-hendrick-apartment-inprogress.png 1620w" >
                     <img class="project-preview-img centre-position" src="images/projects/raw/greenslopes-wickham-st-hendrick-apartment-inprogress.png" alt="an artists impression of a multi-storey apartment">
     
                   </picture>
