--- a/public_html/about.html
+++ b/public_html/about.html
@@ -15,7 +15,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<meta name="description"
 		content="Copland Constructions is a residential and commercial builder based in Brisbane's Southside, specialising in low and medium rise apartments" />
-	<link href="styles-20200204.css" rel=" stylesheet " />
+	<link href="styles-20210102.css" rel=" stylesheet " />
 	<link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
 	<link href="https://fonts.googleapis.com/css?family=Lato:400,700|Saira+Stencil+One&amp;display=swap "
 		rel="stylesheet " />
@@ -52,8 +52,7 @@
 			<div class="template-page-header">
 				<h2 class="template-title centered">About</h2>
 
-				<p><strong>Copland Constructions </strong>is a family-run business with deep ties to the Brisbane
-					construction industry.</p>
+				<p><strong>Copland Constructions </strong>is a family-owned business with over 30 years of experience in the construction industry.</p>
 			</div>
 
 			<div class="template-grid">
@@ -80,18 +79,9 @@
 					<img class="main-image about-image" src="images\projects\resized\greenslopes-logan-rd-apartment-living.jpg" alt="The Copland Constructions Team, George, Fay and Adam">
 				  </picture>
 				<div class="template-content">
-					<p class="template-text">Owner George Copland started as a bricklayer and concreter in the late 80s
-						before getting his builder&#39;s licence and taking on residential and light commercial
-						projects. He has also worked in large industrial settings as a crane operator and dogman,
-						meaning he&#39;s no stranger to the planning and organisation it takes to run a successful
-						project.</p>
+					<p class="template-text">Owner George Copland started as a bricklayer and concreter in the late 80s before getting his builder&#39;s licence and taking on residential and light commercial projects. He has also worked on large infrastructure projects meaning he&#39;s no stranger to the planning and organisation it takes to run a successful project.</p>
 
-					<p class="template-text">Recently, two more Coplands joined the company with wife Fay Copland
-						providing administrative support, bookkeeping and management assistance, and son Adam Copland
-						joining the team as an assistant foreman.</p>
-
-					<p class="template-text">Experience and excellence are in over supply, <strong>ready to tackle the
-							next challenge.</strong></p>
+					<p class="template-text">Experience and excellence are in over supply, <strong>ready to tackle the next challenge.</strong></p>
 				</div>
 			</div>
 		</div>
@@ -108,7 +98,7 @@
 			</div>
 		</div>
 
-		<p class="copyright-text ">&copy; 2019 Copland Constructions Pty Ltd</p>
+		<p class="copyright-text ">&copy; 2020 Copland Constructions Pty Ltd</p>
 	</footer>
 </body>
 
