--- a/public_html/index.html
+++ b/public_html/index.html
@@ -22,7 +22,7 @@
 
     <meta name="description"
         content="Copland Constructions is a residential and commercial builder based in Brisbane's Southside, specialising in churches, luxury homes, and medium rise apartments" />
-    <link rel="stylesheet" href="styles-20200204.css">
+    <link rel="stylesheet" href="styles-20210102.css">
     <link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Saira+Stencil+One&display=swap " rel="stylesheet ">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css " rel="stylesheet ">
@@ -125,25 +125,9 @@
             </div>
             <div class="prj-prev-prnt ">
                 <picture class="">
-                    <source 
-                        type="image/webp" 
-                        sizes="100vw"
-                        srcset="
-                        images\projects\resized\carina-napier-st-front-in-progress-w200.jpg.webp 200w,
-                        images\projects\resized\carina-napier-st-front-in-progress-w400.jpg.webp 400w,
-                        images\projects\resized\carina-napier-st-front-in-progress-w600.jpg.webp 600w,
-                        images\projects\resized\carina-napier-st-front-in-progress-w800.jpg.webp 800w,
-                        images\projects\raw\carina-napier-st-front-in-progress.jpg 1620w" >
-                    <source 
-                        sizes="100vw"
-                        srcset="
-                        images\projects\resized\carina-napier-st-front-in-progress-w200.jpg 200w,
-                        images\projects\resized\carina-napier-st-front-in-progress-w400.jpg 400w,
-                        images\projects\resized\carina-napier-st-front-in-progress-w600.jpg 600w,
-                        images\projects\resized\carina-napier-st-front-in-progress-w800.jpg 800w,
-                        images\projects\raw\carina-napier-st-front-in-progress.jpg 1620w" >
-                    <img class="project-preview-img center-position top-position" src="images/projects/raw/carina-napier-st-front-in-progress.jpg" alt="a temporary fenceline with a sign reading copland constructions">
-    
+                    <img class="project-preview-img center-position top-position" 
+                        src="images/new-projects/2-napier-1.jpg" 
+                        alt="the view of Napier st townhouses from the roadside">
                   </picture>
                     <div class="project-text ">
                         <h3>Napier St</h3>
@@ -161,23 +145,15 @@
                     <i class="fas fa-home "></i>
                     <h3 class="centered ">Residential</h3>
                     <p>
-                        New builds, Renovations, Extensions, Concreting, Bricklaying
+                        New builds, Renovations, and Extensions
                     </p>
                 </div>
                 <div class="col ">
                     <i class="fas fa-building "></i>
-                    <h3 class="centered ">Low-rise</h3>
-                    <p>Single-storey apartments, Carparks, Professional and Commercial premises</p>
+                    <h3 class="centered ">Commercial</h3>
+                    <p>Single and multi-storey apartments, Carparks, Professional and Commercial premises</p>
                 </div>
-                <div class="col ">
-                    <i class="fas fa-hotel "></i>
-                    <h3 class="centered ">Medium-rise</h3>
-                    <p>
-                        Multi-storey apartments
-                    </p>
 
-                </div>
-                <p></p>
             </div>
             <h2>Over 30 years of experience in building up Brisbane</h2>
             <p>Copland Constructions is a family-run, south-side based business that does all forms of building from
@@ -214,7 +190,7 @@
 
 
             </div>
-            <p class="copyright-text "> © 2019 Copland Constructions Pty Ltd</p>
+            <p class="copyright-text "> &copy; 2020 Copland Constructions Pty Ltd</p>
 
     </footer>
 </body>
