--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -15,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description"
         content="Copland Constructions is a residential and commercial builder based in Brisbane's Southside, specialising in low and medium rise apartments" />
-    <link rel=" stylesheet " href="styles-20200204.css">
+    <link rel=" stylesheet " href="styles-20210102.css">
     <link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Saira+Stencil+One&display=swap " rel="stylesheet ">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css " rel="stylesheet ">
@@ -224,11 +224,6 @@
                     </div>
             </div>
         </div>
-
-
-
-
-
     </main>
 
 
@@ -247,7 +242,7 @@
                 </p>
 
             </div>
-            <p class="copyright-text "> © 2019 Copland Constructions Pty Ltd</p>
+            <p class="copyright-text "> &copy; 2020 Copland Constructions Pty Ltd</p>
 
     </footer>
 </body>
