--- a/public_html/services.html
+++ b/public_html/services.html
@@ -15,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description"
         content="Copland Constructions is a residential and commercial builder based in Brisbane's Southside, specialising in low and medium rise apartments" />
-    <link href="styles-20200204.css" rel=" stylesheet " />
+    <link href="styles-20210102.css" rel=" stylesheet " />
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Saira+Stencil+One&amp;display=swap "
         rel="stylesheet " />
@@ -84,25 +84,25 @@
 
                 <p>Have a project around the house that needs a builder? We can help. Copland Constructions has built
                     everything from small retaining walls to multi-level developments.</p>
-                <!-- Low rise -->
+                <!-- low/medium rise -->
 
                 <div class="icon-cont">
                     <i class="fas fa-building "></i>
-                    <h3 class="centered ">Low-rise</h3>
-                </div>
-
-                <p>Is your job more in the commercial space? Copland Constructions is fully licensed to take on any
-                    medium-rise building projects in Queensland, Australia.</p>
-
-                <!-- mid rise -->
-
-                <div class="icon-cont">
-                    <i class="fas fa-hotel "></i>
                     <h3 class="centered ">Medium-rise</h3>
                 </div>
 
+                <p>Is your job more in the commercial space? Copland Constructions is fully licensed to take on any
+                    low and medium-rise building projects in Queensland (up to 4500 m<sup>2</sup> and 4 storeys)</p>
+
+                <!-- open -->
+
+                <div class="icon-cont">
+                    <i class="fas fa-hotel "></i>
+                    <h3 class="centered ">High-rise</h3>
+                </div>
+
                 <p>If you&#39;re pushing up into the sky, Copland Constructions has you covered. Our wide network of
-                    sub-contractors can take on any construction project.</p>
+                    sub-contractors means we can scale to take on any project.</p>
             </div>
             <!-- <div class="btn-cont ">
 
@@ -122,7 +122,7 @@
                         href="mailto:george@coplandconstructions.com.au ">george@coplandconstructions.com.au</a></p>
             </div>
 
-            <p class="copyright-text ">&copy; 2019 Copland Constructions Pty Ltd</p>
+            <p class="copyright-text ">&copy; 2020 Copland Constructions Pty Ltd</p>
         </div>
     </footer>
 </body>
