add gallery functionality

--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -15,10 +15,12 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description"
         content="Copland Constructions is a residential and commercial builder based in Brisbane's Southside, specialising in low and medium rise apartments" />
-    <link rel=" stylesheet " href="styles-20210102.css">
+    <link rel="stylesheet" href="styles-20210102.css">
     <link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Saira+Stencil+One&display=swap " rel="stylesheet ">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css " rel="stylesheet ">
+    <link href="styles/popbox.css" rel="stylesheet">
+    <script src="js/popbox.js"></script>
     <title>Copland Constructions - Projects</title>
 </head>
 
@@ -246,5 +248,11 @@
 
     </footer>
 </body>
+<script type="text/javascript">
+    var popbox = new Popbox({
+          blur:true,
+          overlay:true,
+        });
+  </script>
 
 </html>
