--- a/public_html/index.html
+++ b/public_html/index.html
@@ -162,7 +162,7 @@
             </div>
             <h2>Over 30 years of experience in building up Brisbane</h2>
             <p>Copland Constructions is a family-run, south-side based business that does all forms of building from
-                small residential to medium-rise commercial. Our most recent projects are a suite of modern, luxurious,
+                small residential to high-rise commercial. Our most recent projects are a suite of modern, luxurious,
                 multi-storey apartments across Brisbane
                 and Melbourne. We deliver on-time, on-budget, with integrity and superior workmanship. </p>
             <!-- <p>Family-owned, local business, concreting, brick-laying, block-laying, builder, based on Brisbane's south-side, property, apartments, real-estate, slab, cement, pouring, pavers, paving, house, renovation, renovating, footing, renovation, building,
