copy updated in service page

--- a/public_html/services.html
+++ b/public_html/services.html
@@ -88,11 +88,10 @@
 
                 <div class="icon-cont">
                     <i class="fas fa-building "></i>
-                    <h3 class="centered ">Medium-rise</h3>
+                    <h3 class="centered ">Commercial</h3>
                 </div>
 
-                <p>Is your job more in the commercial space? Copland Constructions is fully licensed to take on any
-                    low and medium-rise building projects in Queensland (up to 4500 m<sup>2</sup> and 4 storeys)</p>
+                <p>Is your job more commercial space? Copland Constructions is a fully-licensed open builder and can deliver industrial, commercial and high rise projects</p>
 
                 <!-- open -->
 
@@ -102,7 +101,7 @@
                 </div>
 
                 <p>If you&#39;re pushing up into the sky, Copland Constructions has you covered. Our wide network of
-                    sub-contractors means we can scale to take on any project.</p>
+                    sub-contractors and open license means we can scale to take on any project.</p>
             </div>
             <!-- <div class="btn-cont ">
 
