--- a/public_html/services.html
+++ b/public_html/services.html
@@ -88,10 +88,10 @@
 
                 <div class="icon-cont">
                     <i class="fas fa-building "></i>
-                    <h3 class="centered ">Commercial</h3>
+                    <h3 class="centered ">Commercial <br>and Industrial</h3>
                 </div>
 
-                <p>Is your job more commercial space? Copland Constructions is a fully-licensed open builder and can deliver industrial, commercial and high rise projects</p>
+                <p>Is your job more commercial space? Copland Constructions is a fully-licensed open builder and can deliver industrial and commercial projects.</p>
 
                 <!-- open -->
 
