Add St Thomas to projects

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -22,7 +22,7 @@
 
     <meta name="description"
         content="Copland Constructions is a residential and commercial builder based in Brisbane's Southside, specialising in churches, luxury homes, and medium rise apartments" />
-    <link rel="stylesheet" href="styles-20210102.css">
+    <link rel="stylesheet" href="styles-20210717.css">
     <link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Saira+Stencil+One&display=swap " rel="stylesheet ">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css " rel="stylesheet ">
@@ -59,6 +59,16 @@
     <main>
         <div class="hero-section ">
 
+            <div class="prj-prev-prnt">
+                <a href="/projects.html#st-thomas">
+                    <img class="project-preview-img hero-image" src="images/new-projects/gc-2.jpg" alt="interior of the church showing the altar" />
+                    <div class="project-text ">
+                        <h3>St Thomas</h3>
+                        <p>A stunning church build with intricate furnishings, expansive carpark and complete landscaping</p>
+                    </div>
+                </a>
+                
+            </div>
             <div class="prj-prev-prnt">
                 <a href="/projects.html#wickham">
                     <picture class="">
