--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -15,7 +15,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description"
         content="Copland Constructions is a residential and commercial builder based in Brisbane's Southside, specialising in low and medium rise apartments" />
-    <link rel="stylesheet" href="styles-20210102.css">
+    <link rel="stylesheet" href="styles-20210717.css">
     <link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Saira+Stencil+One&display=swap " rel="stylesheet ">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css " rel="stylesheet ">
@@ -52,6 +52,36 @@
     </div>
     <main>
         <div class="main-grid m-b">
+
+            <article class="card card--project card--feature" id="st-thomas">
+                <h2>St Thomas Syrian Jacobite Church</h2>
+                <div class="card__video">
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/JCh-REvCZJ8?loop=1&modestbranding=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                </div>
+                <div class="card__img">
+                    <img data-gallery="st-thomas-church" class="mklbItem project-preview-img center-position" src="images/new-projects/gc-2.jpg" alt="interior of the church showing the altar" />
+                    <img data-gallery="st-thomas-church" class="mklbItem project-preview-img center-position" src="images/new-projects/gc-11.jpg" alt="front face of the church with doors" />
+                    <img data-gallery="st-thomas-church" class="mklbItem project-preview-img center-position" src="images/new-projects/gc-4.jpg" alt="altar of the church" />
+                    <img data-gallery="st-thomas-church" class="mklbItem project-preview-img center-position" src="images/new-projects/gc-7.jpg" alt="coffered ceiling highlight" />
+                    <img data-gallery="st-thomas-church" class="mklbItem project-preview-img center-position" src="images/new-projects/gc-38.jpg" alt="Kitchen of Vicor's quarters" />
+                    <img data-gallery="st-thomas-church" class="mklbItem project-preview-img center-position" src="images/new-projects/gc-44.jpg" alt="ensuite of Vicor's" />
+                    <img data-gallery="st-thomas-church" class="mklbItem project-preview-img center-position" src="images/new-projects/gc-37.jpg" alt="hallway with floor to ceiling interior windows" />
+                    <img data-gallery="st-thomas-church" class="mklbItem project-preview-img center-position" src="images/new-projects/gc-29.jpg" alt="interior of the restrooms with three stalls" />
+                    <img data-gallery="st-thomas-church" class="mklbItem project-preview-img center-position" src="images/new-projects/gc-32.jpg" alt="disability bathroom" />
+                    <img data-gallery="st-thomas-church" class="mklbItem project-preview-img center-position" src="images/new-projects/gc-drone-4.jpg" alt="drone photo looking directly down on the roof and carpark of the church" />
+                    <img data-gallery="st-thomas-church" class="mklbItem project-preview-img center-position" src="images/new-projects/gc-drone-5.jpg" alt="drone photo showing the church entrance" />
+                </div>
+
+                <div class="card__text">
+                    <p><em>Copland Constructions were engaged to design and construct this class 9B assembly building.</em></p>
+                    <p>The 4500&nbsp;m<sup>2</sup> site has had extensive earthworks and retainers to build a 65&nbsp;car capacity car park with 560&nbsp;m<sup>2</sup> building.</p>
+                    <p>The building has male, female and PWD amenities as well as Vicar's facilities with a kitchen and bedroom ensuite. Offices, a parents' room and a meeting room feature at the entrance of the church.</p>
+                    <p>The building boasts excellence in finishing and features throughout, including custom-made doors, coffered ceilings, decorative arches and much more.</p>
+                    <p>Delivered on time on budge</p>
+                    <p class="card__stat"><strong>Area:</strong> 560 m<sup>2</sup></p>
+                    <p class="card__stat"><strong>Carpark:</strong> 65 </p>
+                </div>
+            </article>
 
             <article class="card card--project" id="wickham">
                 <div class="card__img">
@@ -126,7 +156,7 @@
 
             </div>
             <p class="copyright-text "> &copy; 2020 Copland Constructions Pty Ltd</p>
-<script src="js/mklb.js"></script>
+        <script src="js/mklb.js"></script>
     </footer>
 </body>
 
