--- a/public_html/projects.html
+++ b/public_html/projects.html
@@ -74,10 +74,10 @@
 
                 <div class="card__text">
                     <p><em>Copland Constructions were engaged to design and construct this class 9B assembly building.</em></p>
-                    <p>The 4500&nbsp;m<sup>2</sup> site has had extensive earthworks and retainers to build a 65&nbsp;car capacity car park with 560&nbsp;m<sup>2</sup> building.</p>
+                    <p>The 4500&nbsp;m<sup>2</sup> site has had extensive earthworks and retaining walls to build a 65&nbsp;car capacity car park with 560&nbsp;m<sup>2</sup> of building.</p>
                     <p>The building has male, female and PWD amenities as well as Vicar's facilities with a kitchen and bedroom ensuite. Offices, a parents' room and a meeting room feature at the entrance of the church.</p>
-                    <p>The building boasts excellence in finishing and features throughout, including custom-made doors, coffered ceilings, decorative arches and much more.</p>
-                    <p>Delivered on time on budge</p>
+                    <p>The building boasts excellence in finishings and features throughout, including custom-made doors, coffered ceilings, decorative arches and much more.</p>
+                    <p>Delivered on time, on budget.</p>
                     <p class="card__stat"><strong>Area:</strong> 560 m<sup>2</sup></p>
                     <p class="card__stat"><strong>Carpark:</strong> 65 </p>
                 </div>
