--- a/public_html/contact.html
+++ b/public_html/contact.html
@@ -2,15 +2,8 @@
 <html lang="en">
 
 <head>
+    <title>Copland Constructions - Contact</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156333426-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-156333426-1');
-    </script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta name="description"
@@ -20,7 +13,14 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Saira+Stencil+One&amp;display=swap "
         rel="stylesheet " />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css " rel="stylesheet " />
-    <title>Copland Constructions - Contact</title>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-P9V5F3LKJ8"></script>
+	<script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-P9V5F3LKJ8');
+	</script>
 </head>
 
 <body>
