--- a/public_html/index.html
+++ b/public_html/index.html
@@ -2,31 +2,28 @@
 <html lang="en">
 
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-156333426-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag() { dataLayer.push(arguments); }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-156333426-1');
-    </script>
-
-    <meta charset="UTF-8">
+	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <title>Copland Constructions</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <meta property="og:title" content="Copland Constructions - Brisbane's Best">
     <meta property="og:image" content="http://coplandconstructions.com.au/images/wickham-st-front.png">
     <meta property="og:description"
         content="Copland Constructions is a residential and commercial builder based in Brisbane's Southside, specialising in churches, luxury homes, and medium rise apartments">
-
     <meta name="description"
         content="Copland Constructions is a residential and commercial builder based in Brisbane's Southside, specialising in churches, luxury homes, and medium rise apartments" />
     <link rel="stylesheet" href="styles-20210717.css">
     <link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700|Saira+Stencil+One&display=swap " rel="stylesheet ">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.css " rel="stylesheet ">
-    <title>Copland Constructions</title>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-P9V5F3LKJ8"></script>
+	<script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-P9V5F3LKJ8');
+	</script>
 </head>
 
 <body>
